--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <hr>
       <section class="output">
          <p>SHA256 Output</p>
-         <textarea id="output-box" readonly>The SHA256 output will be displayed here...</textarea>
+         <textarea id="output-box" readonly placeholder="The SHA256 output will be displayed here..."></textarea>
          <div class="func">
             <label class="switch">
                <input type="checkbox" id="capital">
